--- a/index.html
+++ b/index.html
@@ -1,100 +1,2 @@
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>skiezz Vfx — Portfolio</title>
-  <meta name="description" content="Portfolio de skiezz Vfx — montages, events, VFX" />
-  <style>
-    :root{--bg:#04020a;--panel:#0b0712;--muted:#9aa0b2;--neon:#8b5cf6;--accent:#7c3aed}
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial;background:linear-gradient(180deg,#02020a 0%, #080418 100%);color:#eaf0ff}
-    header{display:flex;justify-content:space-between;align-items:center;padding:14px 18px}
-    .brand{display:flex;gap:12px;align-items:center}
-    .logo{width:56px;height:56px;border-radius:12px;background:linear-gradient(135deg,var(--neon),#b388ff);display:grid;place-items:center;font-weight:800;color:#07040b}
-    nav{display:flex;gap:10px;align-items:center}
-    a.button{background:linear-gradient(90deg,var(--accent),#a78bfa);padding:10px 12px;border-radius:10px;color:#fff;font-weight:700;text-decoration:none}
-    main{max-width:1100px;margin:18px auto;padding:10px}
-    .layout{display:grid;grid-template-columns:1fr 320px;gap:16px}
-    .card{background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);padding:14px;border-radius:12px;border:1px solid rgba(255,255,255,0.03)}
-    h1{margin:0;font-size:22px}
-    .lead{color:var(--muted);margin-top:6px}
-    .controls{display:flex;gap:8px;margin-top:12px}
-    .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin-top:14px}
-    .thumb{height:140px;border-radius:8px;background-size:cover;background-position:center;border:1px solid rgba(255,255,255,0.03)}
-    .meta{margin-top:8px}
-    .meta h3{margin:0;font-size:15px}
-    .meta p{margin:6px 0 0 0;color:var(--muted);font-size:13px}
-    footer{color:var(--muted);text-align:center;margin-top:18px}
-    .overlay{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(2,2,8,0.7)}
-    .overlay.open{display:flex}
-    .modal{width:920px;max-width:96%;background:#050314;padding:16px;border-radius:12px}
-    input,textarea,select{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.03);background:transparent;color:#eaf0ff}
-    @media(max-width:980px){.layout{grid-template-columns:1fr}}
-  </style>
-</head>
-<body>
-  <header>
-    <div class="brand"><div class="logo">SK</div><div><div style="font-weight:800">skiezz Vfx</div><div style="font-size:12px;color:var(--muted)">Montages • VFX • Events</div></div></div>
-    <nav>
-      <a class="button" id="btn-login">Connexion Admin</a>
-    </nav>
-  </header>
-
-  <main>
-    <div class="layout">
-      <section class="card">
-        <h1>Portfolio — <span style="color:var(--neon)">skiezz Vfx</span></h1>
-        <p class="lead">Montages, POV, highlights et VFX. Envoie ce lien à tes clients pour montrer ton travail.</p>
-
-        <div class="controls">
-          <a class="button" id="btn-add">Ajouter projet</a>
-          <a class="button" id="btn-export">Exporter JSON</a>
-          <a class="button" id="btn-import">Importer JSON</a>
-          <div style="margin-left:auto;display:flex;align-items:center;color:var(--muted)" id="status">Visiteur</div>
-        </div>
-
-        <div id="gallery" class="gallery"></div>
-
-        <footer>Site statique • Admin côté client (localStorage)</footer>
-      </section>
-
-      <aside class="card">
-        <h3>Réseaux</h3>
-        <p style="color:var(--muted)">Cliques pour modifier (admin).</p>
-        <p><a id="link-x" href="#">X</a> · <a id="link-yt" href="#">YouTube</a> · <a id="link-discord" href="#">Discord</a></p>
-        <hr style="opacity:0.06;margin:12px 0">
-        <p style="font-size:13px;color:var(--muted)"><strong>Comptes démo :</strong><br>Admin: <code>admin</code>/<code>Admin@123</code><br>Viewer: <code>viewer</code>/<code>viewer</code></p>
-        <p style="font-size:13px;color:var(--muted)">Pour rendre le site professionnel (backend + uploads), je peux t'aider ensuite.</p>
-      </aside>
-    </div>
-  </main>
-
-  <div class="overlay" id="overlay"><div class="modal"><div style="display:flex;justify-content:space-between;align-items:center"><h3 id="modal-title">Ajouter</h3><div><a class="button" id="save">Enregistrer</a> <a class="button" id="close">Fermer</a></div></div>
-  <div style="margin-top:12px"><label>Titre</label><input id="t-title"><label style="margin-top:8px">Miniature (URL)</label><input id="t-thumb"><label style="margin-top:8px">Type</label><select id="t-type"><option value="montage">Montage</option><option value="match">Match</option><option value="event">Event</option></select><label style="margin-top:8px">Description</label><textarea id="t-desc" rows="4"></textarea><label style="margin-top:8px">Lien vidéo (YouTube/.mp4)</label><input id="t-video"></div></div></div>
-
-  <script>
-    // single-file portfolio — violet theme
-    const DEFAULT = [
-      {id:'p1',title:'Montage - Top Plays',thumb:'https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=1400&auto=format&fit=crop',desc:'Compilation des meilleurs plays',video:'https://www.youtube.com/watch?v=dQw4w9WgXcQ',type:'montage'}
-    ];
-    const USERS = [{user:'admin',pass:'Admin@123',role:'admin'},{user:'viewer',pass:'viewer',role:'viewer'}];
-    const gallery = document.getElementById('gallery'); const overlay = document.getElementById('overlay'); const status = document.getElementById('status');
-    let items = load(); let currentUser = null; let editing = null;
-    function load(){ try{ const raw = localStorage.getItem('pf_items'); if(!raw){ localStorage.setItem('pf_items', JSON.stringify(DEFAULT)); return DEFAULT.slice(); } return JSON.parse(raw);}catch(e){ localStorage.setItem('pf_items', JSON.stringify(DEFAULT)); return DEFAULT.slice(); } }
-    function save(){ localStorage.setItem('pf_items', JSON.stringify(items)); }
-    function render(){ gallery.innerHTML=''; items.forEach(it=>{ const el=document.createElement('div'); el.className='card'; el.style.padding='10px'; const t=document.createElement('div'); t.className='thumb'; t.style.backgroundImage=`url(${it.thumb})`; el.appendChild(t); const m=document.createElement('div'); m.className='meta'; m.innerHTML=`<h3>${escape(it.title)}</h3><p>${escape(it.desc)}</p>`; el.appendChild(m); const foot=document.createElement('div'); foot.style.display='flex'; foot.style.justifyContent='space-between'; foot.style.marginTop='10px'; const left=document.createElement('div'); left.textContent=it.type; foot.appendChild(left); const right=document.createElement('div'); right.style.display='flex'; right.style.gap='8px'; const view=document.createElement('a'); view.className='button'; view.textContent='Voir'; view.href='#'; view.onclick=(e)=>{ e.preventDefault(); openViewer(it); }; right.appendChild(view); if(currentUser && currentUser.role==='admin'){ const edit=document.createElement('a'); edit.className='button'; edit.textContent='Edit'; edit.href='#'; edit.onclick=(e)=>{ e.preventDefault(); openEdit(it.id); }; const del=document.createElement('a'); del.className='button'; del.textContent='Suppr'; del.href='#'; del.onclick=(e)=>{ e.preventDefault(); if(confirm('Supprimer ?')){ items=items.filter(x=>x.id!==it.id); save(); render(); } }; right.appendChild(edit); right.appendChild(del); } foot.appendChild(right); el.appendChild(foot); gallery.appendChild(el); }); }
-    function escape(s){ return (s||'').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); }
-    function openViewer(it){ const w=window.open('','_blank'); w.document.write(`<html><head><meta charset='utf-8'><meta name='viewport' content='width=device-width,initial-scale=1'><title>${it.title}</title></head><body style='background:#000;color:#fff;margin:0;padding:12px;font-family:Arial'> <h2>${it.title}</h2><p>${it.desc}</p>${embed(it.video)}</body></html>`); w.document.close(); }
-    function embed(u){ if(!u) return ''; if(u.includes('youtube.com')||u.includes('youtu.be')){ let id=''; if(u.includes('watch')){ const m=u.match(/[?&]v=([\w-]{11})/); if(m) id=m[1]; } if(!id && u.includes('youtu.be')){ const m=u.match(/youtu\.be\/([\w-]{11})/); if(m) id=m[1]; } if(id) return `<iframe width="100%" height="480" src="https://www.youtube.com/embed/${id}" frameborder="0" allowfullscreen></iframe>`; } if(u.endsWith('.mp4')) return `<video width="100%" controls src="${u}"></video>`; return `<a href="${u}" target="_blank">Lien vidéo</a>`; }
-    document.getElementById('btn-login').addEventListener('click', ()=>{ const name=prompt('Utilisateur'); if(!name) return; const pass=prompt('Mot de passe'); if(!pass) return; const u=USERS.find(x=>x.user===name && x.pass===pass); if(!u) return alert('Invalid'); currentUser={user:u.user,role:u.role}; status.textContent=(u.role==='admin')?('Admin — '+u.user):('Visiteur'); render(); alert('Connecté en '+u.user); });
-    document.getElementById('btn-add').addEventListener('click', ()=>{ if(!currentUser || currentUser.role!=='admin') return alert('Admin requis'); editing=null; document.getElementById('modal-title').textContent='Ajouter'; document.getElementById('t-title').value=''; document.getElementById('t-thumb').value=''; document.getElementById('t-desc').value=''; document.getElementById('t-video').value=''; overlay.classList.add('open'); });
-    document.getElementById('close').addEventListener('click', ()=>overlay.classList.remove('open'));
-    document.getElementById('save').addEventListener('click', ()=>{ const title=document.getElementById('t-title').value.trim(); if(!title) return alert('Titre requis'); const it={id: editing || ('p'+Date.now()), title, thumb:document.getElementById('t-thumb').value.trim(), desc:document.getElementById('t-desc').value.trim(), video:document.getElementById('t-video').value.trim(), type:document.getElementById('t-type').value}; if(editing){ items=items.map(x=>x.id===editing?it:x); } else { items.unshift(it); } save(); overlay.classList.remove('open'); render(); });
-    function openEdit(id){ const it=items.find(x=>x.id===id); if(!it) return; editing=id; document.getElementById('modal-title').textContent='Éditer'; document.getElementById('t-title').value=it.title; document.getElementById('t-thumb').value=it.thumb; document.getElementById('t-desc').value=it.desc; document.getElementById('t-video').value=it.video; document.getElementById('t-type').value=it.type||'montage'; overlay.classList.add('open'); }
-    document.getElementById('btn-export').addEventListener('click', ()=>{ const d=JSON.stringify(items,null,2); const b=new Blob([d],{type:'application/json'}); const u=URL.createObjectURL(b); const a=document.createElement('a'); a.href=u; a.download='pf_items.json'; a.click(); URL.revokeObjectURL(u); });
-    document.getElementById('btn-import').addEventListener('click', ()=>{ const t=prompt('Colle JSON ici'); if(!t) return; try{ const parsed=JSON.parse(t); if(!Array.isArray(parsed)) throw 0; items=parsed; save(); render(); alert('Import OK'); }catch(e){ alert('JSON invalide'); } });
-    render();
-  </script>
-</body>
-</html>
+username : admin
+password : skiezz123
