--- a/index.html
+++ b/index.html
@@ -89,15 +89,19 @@
    * CONFIGURATION FIREBASE - REMPLACE ICI AVEC LA TIENNE
    ******************************************************/
   // Si tu veux démarrer sans Firebase, laisse firebaseConfig = null
-  const firebaseConfig = {
-    // EXEMPLE:
-    // apiKey: "AIza....",
-    // authDomain: "ton-projet.firebaseapp.com",
-    // projectId: "ton-projet",
-    // storageBucket: "ton-projet.appspot.com",
-    // messagingSenderId: "123456",
-    // appId: "1:123:web:abc"
-  };
+  const firebaseConfig = rules_version = '2';
+service cloud.firestore {
+  match /databases/{database}/documents {
+    match /projects/{doc} {
+      allow read: if true;
+      allow write: if request.auth != null;
+    }
+    match /meta/{doc} {
+      allow read: if true;
+      allow write: if request.auth != null;
+    }
+  }
+}
   /******************************************************/
 
   // fallback: si config vide => localStorage mode
